syntax = "proto3";

package cn.promptness.rpt.base.config.ClientConfig;

option optimize_for = SPEED;
option java_package = "cn.promptness.rpt.base.config";
option java_outer_classname = "ClientConfigProto";

message ClientConfig {

  string serverIp = 1;
  int32 serverPort = 2;
  string clientKey = 3;
  bool connection = 4;
  string channelId = 5;

  repeated RemoteConfig config = 6;
  repeated string remoteResult = 7;

  message RemoteConfig{
    int32 remotePort = 1;
    int32 localPort = 2;
    string localIp = 3;
    string description = 4;
  }
}